--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -236,7 +236,7 @@ body{
   position: relative;
   width: calc(50% - 10px);
   height: calc(50% - 10px);
-  margin: 0 6;
+  margin: 0 3px;
 }
 
 .imagem-maior img, .quatro-imagens img{
@@ -298,4 +298,44 @@ body{
   color: grey;
   font-size: 14px;
   margin: 15px 0px 0px 0px;
+}
+
+.container-rodape{
+  width: 100%;
+  background: var(--titulo-bordas);
+  margin: 36px 0 0 0;
+}
+
+.contatos-rodape{
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+}
+
+.conteudo-rodape{
+  display: flex;
+  flex-direction: column;
+  padding: 15px 20px;
+}
+
+.conteudo-rodape h2{
+  color: var(--branco);
+  margin: 0 0 15px 0;
+  font-size: 20px;
+}
+
+.conteudo-rodape div{
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+
+.conteudo-rodape img{
+  width: 18px;
+}
+
+.conteudo-rodape span{
+  color: var(--branco);
+  font-size: 14px;
+  margin: 0 0 0 10px;
 }
